--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-
+title: High School Musical Archive
+#logo
+description: The Unofficial Fan Resource about High School Musical
+#show_downloads: true
+theme: jekyll-theme-minimal
